2003-05-13  Theodore A. Roth  <troth@openavr.org>

	* avrdude.conf.in: Add pagel and bs2 entries for at90s1200 device.

2003-05-13  Theodore A. Roth  <troth@openavr.org>

	* doc/TODO: Add note about avr910 device codes.

2003-05-04  Theodore A. Roth  <troth@openavr.org>

	* configure.ac: Check for ncurses library (since it can be a
	replacement for termcap).

2003-05-02  Theodore A. Roth  <troth@openavr.org>

	* avrdude.conf.in: Add avr decodes for devices known in avr910
	firmware version 2.3.
	Add missing stk500 devocde for 2343.

2003-04-23  Eric B. Weddington  <eric@ecentral.com>

	* fileio.c: Fix for bug #3293. Set correct open mode for raw format
	for Windows.

2003-04-18  Theodore A. Roth  <troth@openavr.org>

	* configure.ac: Add cvs suffix back to version.
	* doc/TODO: Add a few items.

2003-04-18

	* AVRDUDE 4.1.0 has been released (cvs release tag is "release_4_1_0").

2003-04-17  Theodore A. Roth  <troth@openavr.org>

	* configure.ac: Set version to 4.1.0.
	* doc/avrdude.texi: Add note about avr910 programmer type.

2003-04-17  Eric B. Weddington  <eric@ecentral.com>

	* NEWS: Replace TBD with new release version.

2003-04-17  Eric B. Weddington  <eric@ecentral.com>

	* avrdude.conf.in: Change name of pony programmer to pony-stk200
	to better describe the hardware (PonyProg is software that works
	with various hardware).

2003-04-16  Eric B. Weddington  <eric@ecentral.com>

	* avrdude.conf.in: Add support for ATtiny26
	Submitted by Artur Lipowski <LAL@pro.onet.pl>
	* NEWS: List new devices supported: ATtiny26

2003-04-16  Eric B. Weddington <eric@ecentral.com>

	* avrdude.conf.in: Add support for ATmega8535
	Submitted by Alexander Peter <apeter@gmx.de>
	* NEWS: List new devices supported: ATmega8535

2003-04-09  Theodore A. Roth  <troth@openavr.org>

	* avr910.c: Reading a 16 bit word in paged load needs to swap the
	bytes since the 'R' command returns MSB first and the internal buffer
	stores LSB first.
